manifests/apm-attacher-1.0.0.tgz-manifest.yaml
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: default
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: https
  selector:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release
  namespace: default
  labels:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
spec:
  replicas: 1
  selector:
    matchLabels:      
      app.kubernetes.io/name: my-release
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        generated-cert: 6e317cef5b5641c9bc5a8345bc2afb879b9c8708cb42f57082b123a237f7f2f2
      labels:        
        app.kubernetes.io/name: my-release
        app.kubernetes.io/component: webhook
        app.kubernetes.io/instance: my-release
    spec:
      containers:
        - name: my-release
          image: "docker.elastic.co/observability/apm-attacher:v1.0.0"
          imagePullPolicy: Always
          args:
            - -certFile=/opt/webhook/certs/cert.pem
            - -keyFile=/opt/webhook/certs/key.pem
            - -config=/opt/webhook/config/webhook.yaml
          volumeMounts:
            - name: my-release-certs
              mountPath: /opt/webhook/certs
              readOnly: true
            - name: config
              mountPath: /opt/webhook/config
              readOnly: true
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
      volumes:
        - name: my-release-certs
          secret:
            secretName: my-release
        - name: config
          configMap:
            name: webhook-config
---
# Source: apm-attacher/templates/webhook.yaml
# This file is based on modifications to Kubernetes Mutating Webhook by Expedia, Inc., which is licensed under Apache 2.0.
# https://github.com/ExpediaGroup/kubernetes-sidecar-injector
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release
  labels:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
webhooks:
  - name: my-release.default.svc.cluster.local
    clientConfig:
      service:
        name: my-release
        namespace: default
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lRWEpZVHBNSUV0YmV6NFlVRnljN0dKakFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxdGVTMXlaV3hsWVhObExXTmhNQjRYRFRJME1EWXhOakF3TXpnME5Gb1hEVE0wTURZeApOREF3TXpnME5Gb3dHREVXTUJRR0ExVUVBeE1OYlhrdGNtVnNaV0Z6WlMxallUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNVTJJbXpjVUdtZVF4NFJxRFlrdWszQkFnWE5uMG1HK2MwcmxBd3YKZnk2L1hrdGMzcTk4WXBydjU3RmdndnljemFjUUVraXc0MWxWOGd2dlJFVWFyL1o2UlZrY0dibkNndGdVRUVhRAp1TG9kNzh6QVh4 [...]
    failurePolicy: Fail
    admissionReviewVersions: [ "v1", "v1beta1" ]
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["*"]
        resources: ["pods"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kube-public
            # The webhook has to be deployed to its own namespace, or else
            # attempts at scaling up pods will fail when trying to call
            # themself.
            - default
